--- a/src/Smartstore.Web/Views/Product/Partials/Product.Offer.Actions.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.Offer.Actions.cshtml
@@ -32,7 +32,7 @@
                 @Html.EditorFor(model => model.AddToCart, "QtyInput", new { large = true, htmlAttributes = new { aria_label = T("Products.Qty") }})
             </div>        
             <div sm-if="!toCart.CollapsibleAssociatedProduct" class="col">
-                <span sm-if="toCart.AddToCartDescription.HasValue()" id="pd-addtocart-desc" class="sr-only">@toCart.AddToCartDescription</span>
+                <span sm-if="toCart.AddToCartSummary.HasValue()" id="pd-addtocart-desc" class="sr-only">@toCart.AddToCartSummary</span>
                 <button type="button"
                         class="btn btn-primary btn-lg btn-block btn-add-to-cart ajax-cart-link"
                         data-href='@Url.Action("AddProduct", "ShoppingCart", new { productId = toCart.ProductId, shoppingCartTypeId = (int)ShoppingCartType.ShoppingCart })'
@@ -41,7 +41,7 @@
                         data-action="add"
                         data-toggle="offcanvas" 
                         data-target="#offcanvas-cart"
-                        attr-aria-describedby='(toCart.AddToCartDescription.HasValue(), "pd-addtocart-desc")'>
+                        attr-aria-describedby='(toCart.AddToCartSummary.HasValue(), "pd-addtocart-desc")'>
                     <i class="fa fa-cart-arrow-down d-none d-sm-inline-block d-md-none d-xl-inline-block" aria-hidden="true"></i>
                     <span>@T(toCart.AvailableForPreOrder ? "ShoppingCart.PreOrder" : "ShoppingCart.AddToCart")</span>
                 </button>
