--- a/src/Smartstore.Web/Views/Shared/Partials/Customer.Avatar.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/Customer.Avatar.cshtml
@@ -36,7 +36,11 @@
 <div class="@(Model.Large ? "customer-avatar-lg" : "customer-avatar")">
     @if (canViewProfile)
     {
-        <a class="avatar-link avatar-outer focus-inset" asp-route="CustomerProfile" asp-route-id="@Model.Id" title="@Model.UserName" aria-label="@Model.UserName">
+        <a class="avatar-link avatar-outer focus-inset" 
+           asp-route="CustomerProfile" 
+           asp-route-id="@Model.Id" 
+           title="@Model.UserName" 
+           aria-label="@Model.UserName @T("Common.Profile")">
             @{ await Avatar(); }
         </a>
     }
