WCAG: Product (wip)

--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_product.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_product.scss
@@ -148,7 +148,7 @@ $pd-offer-spacing:              $grid-gutter-width / 2;
 // Specification attributes
 // =====================================================
 
-.pd-specs-table tr:first-child td {
+.pd-specs-table tr:first-child th {
     border-top-width: 0;
 }
 
