WCAG review: Product

--- a/src/Smartstore.Web/Views/Product/Partials/Product.Tags.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.Tags.cshtml
@@ -11,6 +11,7 @@
     <div class="block-title">
         <h4 id="pd-tags-title">@T("Products.Tags")</h4>
     </div>
+    @* TODO: (wcag) (mg) And once again you removed arrow navigation via AccessKit! Why? *@
     <ul class="block-body pt-3 hstack flex-wrap gap-1 list-unstyled" aria-labelledby="pd-tags-title">
         @foreach (var tag in Model)
         {
