--- a/src/Smartstore.Web/Views/Shared/ChoiceTemplates/Choice.CheckRadio.cshtml
+++ b/src/Smartstore.Web/Views/Shared/ChoiceTemplates/Choice.CheckRadio.cshtml
@@ -6,6 +6,7 @@
     var controlId = Model.BuildControlId();
     var items = Model.Values ?? new List<ChoiceItemModel>();
     var type = Model.AttributeControlType == AttributeControlType.Checkboxes ? "checkbox" : "radio";
+    var srLabelTemplate = T("Aria.Label.Choice");
 }
 
 <div attr-role='(type == "radio", "radiogroup")' attr-aria-orientation='(type == "radio", "vertical")'>
@@ -13,9 +14,16 @@
     {
         var checkId = controlId + "_" + item.Id;
         var hasColor = item.Color.HasValue() && item.Color != "transparent";
+        string label = item.GetItemLabel();
         <div class="form-check" title="@item.Title.NullEmpty()">
-            <input class="form-check-input" type="@type" id="@checkId" name="@controlId" value="@item.Id"
-                   attr-checked='(item.IsPreSelected, "checked")' attr-disabled='(item.IsDisabled, "disabled")' />
+            <input class="form-check-input" 
+                   type="@type" 
+                   id="@checkId" 
+                   name="@controlId" 
+                   value="@item.Id"
+                   aria-label="@srLabelTemplate.Value.FormatInvariant(Model.Name, label)"
+                   attr-checked='(item.IsPreSelected, "checked")' 
+                   attr-disabled='(item.IsDisabled, "disabled")' />
 
             <label class="form-check-label choice-item" attr-class='(item.IsUnavailable, "choice-item-unavailable")' for="@checkId">
                 @if (item.ImageUrl.HasValue())
@@ -36,7 +44,7 @@
                     <span class="choice-item-color" style="background-color: @item.Color"></span>
                 }
 
-                @item.GetItemLabel()
+                @label
             </label>
         </div>
     }
