--- a/src/Smartstore.Web/Views/Shared/Components/PopularProductTags/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/PopularProductTags/Default.cshtml
@@ -20,15 +20,20 @@
     </div>
 
     <div class="listbox block-body position-relative">
-        <a href="javascript;:" class="btn-skip-content btn btn-primary rounded-pill">
+        <a sm-if="Model.Tags.Count > 1" href="javascript;:" class="btn-skip-content btn btn-primary rounded-pill">
             @T("Common.SkipList")
         </a>
         <div class="tags fs-h4">
-            <ul class="list-inline">
+            <ul class="list-inline" aria-labelledby="popular-tags-title" role="menu" aria-orientation="horizontal">
                 @foreach (var item in Model.Tags)
                 {
-                    <li class="list-inline-item">
-                        <a asp-route="ProductsByTag" asp-route-productTagId="@item.Id" asp-route-path="@item.Slug" class="link-body link-transition link-dnu" style="font-size:@(Model.GetFontSize(item))%;">
+                    <li class="list-inline-item" role="none">
+                        <a asp-route="ProductsByTag" 
+                           asp-route-productTagId="@item.Id" 
+                           asp-route-path="@item.Slug"
+                           role="menuitem"
+                           class="link-body link-transition link-dnu" 
+                           style="font-size:@(Model.GetFontSize(item))%;">
                             <span sm-language-attributes-for="item.Name">@item.Name</span>
                         </a>
                     </li>
