Fixed wrong script typo

--- a/src/Smartstore.Web/Views/Catalog/ProductTagsAll.cshtml
+++ b/src/Smartstore.Web/Views/Catalog/ProductTagsAll.cshtml
@@ -13,7 +13,7 @@
     </div>
     <div class="page-body">
         <div sm-if="Model.Tags.Count > 0" class="listbox block-body position-relative">
-            <a href="javascript;:" class="btn-skip-content btn btn-primary rounded-pill">
+            <a href="javascript:;" class="btn-skip-content btn btn-primary rounded-pill">
                 @T("Common.SkipList")
             </a>
             <div class="tags fs-h4">
