--- a/src/Smartstore.Web/Views/Product/Partials/Product.Tags.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.Tags.cshtml
@@ -8,7 +8,7 @@
 }
 
 <nav class="pd-tags block position-relative" aria-labelledby="pd-tags-title">
-    <a sm-if="Model.Count > 1" href="javascript;:" class="btn-skip-content btn btn-primary rounded-pill">
+    <a sm-if="Model.Count > 1" href="javascript:;" class="btn-skip-content btn btn-primary rounded-pill">
         @T("Common.SkipList")
     </a>
     <div class="block-title">
