--- a/src/Smartstore.Web/Views/Product/Partials/Product.Specs.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.Specs.cshtml
@@ -1,6 +1,9 @@
 ﻿@using Smartstore.Web.Models.Catalog
+﻿@using Smartstore.Core.Catalog
 
 @model IList<ProductSpecificationModel>
+
+@inject CatalogSettings CatalogSettings
 
 @{
     if (Model.Count == 0)
@@ -29,7 +32,9 @@
                         else if (count > 1)
                         {
                             <ul class="mb-0 pl-3">
-                                @foreach (var item in grp.OrderBy(x => x.DisplayOrder).ThenNaturalBy(x => x.SpecificationAttributeOption))
+                                @foreach (var item in grp
+                                    .OrderBy(x => x.DisplayOrder)
+                                    .ThenNaturalBy(CatalogSettings.SortAttributesNaturally ? x => x.SpecificationAttributeOption : null))
                                 {
                                     <li class="pb-1"><span sm-language-attributes-for="item.SpecificationAttributeOption">@item.SpecificationAttributeOption</span></li>
                                 }
