Resolves #1357 Pricing: Add a setting that takes tiered prices of products into account, that are assigned by an attribute of type "linked product"

--- a/src/Smartstore.Web/Areas/Admin/Views/Product/Partials/PriceSettings.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Product/Partials/PriceSettings.cshtml
@@ -132,6 +132,15 @@
     </div>
     <div class="adminRow pricing-discounts">
         <div class="adminTitle">
+            <smart-label asp-for="PriceSettings.ApplyDiscountsOfLinkedProducts" />
+        </div>
+        <div class="adminData">
+            <setting-editor asp-for="PriceSettings.ApplyDiscountsOfLinkedProducts"></setting-editor>
+            <span asp-validation-for="PriceSettings.ApplyDiscountsOfLinkedProducts"></span>
+        </div>
+    </div>
+    <div class="adminRow pricing-discounts">
+        <div class="adminTitle">
             <smart-label asp-for="PriceSettings.ApplyPercentageDiscountOnTierPrice" />
         </div>
         <div class="adminData">
