Added a little more space for megamenu subitems thus badges won't stick together

--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_megamenu.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_megamenu.scss
@@ -411,6 +411,7 @@ $mixed-megamenu-bg:             $megamenu-bg;
     text-decoration: none;
     color: $megamenu-subitem-color;
     transition: color 0.1s ease;
+    margin-bottom: 1px;
 
     &:hover {
         color: inherit;
