--- a/src/Smartstore.Web/Views/Product/Partials/Product.Specs.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.Specs.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Smartstore.Web.Models.Catalog
-﻿@using Smartstore.Core.Catalog
+@using Smartstore.Core.Catalog
 
 @model IList<ProductSpecificationModel>
 
