--- a/src/Smartstore.Web/Views/Shared/EditorTemplates/Link.cshtml
+++ b/src/Smartstore.Web/Views/Shared/EditorTemplates/Link.cshtml
@@ -26,7 +26,7 @@
      data-current-type="@(Value != null ? expression.Schema : string.Empty)">
 
     @* Template control that receives the link expression. *@
-    <input asp-for="@Model" type="hidden" value="@Value" attr-class='(size.HasValue(), "form-control-" + size)' />
+    <input asp-for="@Model" type="hidden" value="@Value" />
 
     <div class="row flex-nowrap g-@gutterSize">
 
@@ -108,9 +108,13 @@
                     <div class="input-group" attr-class='(size.HasValue(), "input-group-" + size)'>
                         <input id="lb-file-url-@rnd" type="text" class="form-control transferable resettable bg-white text-muted" value="@label" readonly />
                         <div class="input-group-append">
-                            <a href="javascript:;" class="btn btn-secondary browse-files" data-file-manager-url="@Display.GetFileManagerUrl()" data-field-id="lb-file-url-@rnd">
+                            <a href="javascript:;" 
+                               class="btn btn-secondary browse-files" 
+                               data-file-manager-url="@Display.GetFileManagerUrl()" 
+                               data-field-id="lb-file-url-@rnd"
+                               title="@(T("Common.BrowseFiles"))&hellip;">
                                 <i class="fa fa-upload"></i>
-                                <span>@(T("Common.BrowseFiles"))&hellip;</span>
+                                <span sm-if='size != "sm"'>@(T("Common.BrowseFiles"))&hellip;</span>
                             </a>
                         </div>
                     </div>
@@ -125,8 +129,13 @@
             </button>
             @if (!hideQueryString)
             {
-                <button type="button" class="btn btn-secondary btn-icon btn-query-string dropdown-toggle" attr-class='(expression.Schema == "url", "hide")'
-                        title="@T("Common.QueryString")" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button type="button" 
+                        class="btn btn-secondary btn-icon btn-query-string dropdown-toggle@(size.HasValue() ? " btn-" + size : "")" 
+                        attr-class='(expression.Schema == "url", "hide")'
+                        title="@T("Common.QueryString")" 
+                        data-toggle="dropdown" 
+                        aria-haspopup="true" 
+                        aria-expanded="false">
                     <i class="fa fa-question-circle @(expression.Query.HasValue() ? "text-success" : "text-muted")"></i>
                 </button>
                 <div class="dropdown-menu dropdown-menu-right">
